Implemented user module for the manufacturing app